# freppy

./: README.md  setup.cfg  setup.py
freppy/: __init__.py  freppy.py  version.py
freppy/tests/: conftest.py  test_freppy.py
