[metadata]
name = freppy
description = Python tools to work with frepp-generated data files
url = https://github.com/jkrasting/freppy
author = John Krasting
author_email = john.krasting@noaa.gov
keywords = gfdl fre frepp
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: Public Domain
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description_content_type=text/x-rst
long_description =
    **freppy** is a Python package in the public domain
    that provides tools for working with frepp-generated
    post-processed data from GFDL weather and climate models.

    More Information
    ----------------
    - Source code: `<http://github.com/jkrasting/freppy>`_

[options]
packages = find_namespace:
zip_safe = False
include_package_data = False
python_requires = >=3.7
install_requires =
    pandas

[options.package_data]
freppy =
    resources/small_pp_tree.tar.gz
